skin/frontend/default/oneshop/css/styles.css
/* ... */
.link-wishlist { color:#444; }
.link-reorder {}
.link-compare {}
.link-print { /*background:url(../images/i_print.gif) 0 2px no-repeat; padding:3px 0 3px 25px;*/ }
.link-rss { background:url(../images/i_rss.gif) 0 1px no-repeat; padding-left:18px; line-height:14px; white-space:nowrap; }
.btn-remove { display:block; width:12px; height:12px; font-size:0; line-height:0; background:url(../images/btn_remove.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }
.btn-previous { display:block; width:12px; height:12px; font-size:0; line-height:0; background:url(../images/btn_previous.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }
.btn-remove2 { display:block; width:16px; height:16px; font-size:0; line-height:0; background:url(../images/btn_trash.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }
.btn-edit    { display:block; width:12px; height:12px; font-size:0; line-height:0; background:url(../images/btn_edit.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }

.cards-list dt { margin:5px 0 0; }
.cards-list .offset { padding:2px 0 2px 20px; }

.separator { margin:0 3px; }

.divider { clear:both; display:block; font-size:0; line-height:0; height:1px; background:#ccc; margin:10px 0; text-indent:-999em; overflow:hidden; }

/* Global site notices */
.global-site-notice { border:1px solid #cfcfcf; border-width:0 0 1px; background:#ffff90; font-size:12px; line-height:1.25; text-align:center; color:#2f2f2f; }
.global-site-notice .notice-inner { width:860px; margin:0 auto; padding:12px 0 12px 80px; background:url(../images/i_notice.gif) 20px 25px no-repeat; text-align:left; }
.global-site-notice .notice-inner p { margin:0; border:1px dotted #cccc73; padding:10px; }
.global-site-notice .notice-inner .actions { padding-top:10px; }

/* Cookie Notice */
.notice-cookie { }

/* Noscript Notice */
.noscript {}

/* Demo Notice */
.demo-notice { margin:0; padding:6px 10px; background:#d75f07; font-size:12px; line-height:1.15; border:0; text-align:center; color:#fff; }
.demo-notice .notice-inner { width:auto; padding:0; background:none; text-align:center; }
.demo-notice .notice-inner p { padding:0; border:0; }

/* ======================================================================================= */


/* Header ================================================================================ */
.logo { float:left; }

.header-container 
{
	background-color: #131313;
	margin-bottom: -15px;
}

.header 
{ 
	width: 1000px;
	margin-left: 0;
	margin: auto;
}

.header .logo { float:left; text-decoration:none !important; position: relative; top: 2px; left:1px;}
.header .logo strong { position:absolute; top:-999em; left:-999em; width:0; height:0; font-size:0; line-height:0; text-indent:-999em; overflow:hidden; }

.header .top-promo { float:left; width:117px; height:30px; margin:12px 10px 0; background:url(../images/bkg_top-promo.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }


.quick-access { background:#131313; font-size: 11px; font-weight: bolder; color:#ababab; padding:7px 13px; text-align:right; }
.quick-access .welcome-msg { display:inline; margin:0; color:#ababab; }
.quick-access .welcome-msg a { color:#ababab; }
.quick-access .form-language { float:left; }
.quick-access .form-language label { font-weight:bold; padding-right:5px; color:#ababab; vertical-align:middle; }
.quick-access .form-language select { padding:0; }
.quick-access .form-language select.flags option { background-position:4px 50%; background-repeat:no-repeat; padding-left:25px; }
.quick-access .links { padding-left:8px; top: 13px;
position: relative; }
.quick-access .links,
.quick-access .links li { display:inline; }
.quick-access .links li { padding:0 4px 0 1px; }
.quick-access .links a { color:#ababab; }
.quick-access .links a { padding:0 7px 0 0; text-decoration: none; color:#ababab;}
.quick-access .links li.last a { padding:0; background:none; }
.quick-access a:hover { color:#fff; }

.top-bar { padding:3px 12px 2px 12px; border:1px solid #bbb; border-bottom-color:#dedede; background:#efefef; line-height:21px; }
.top-bar .breadcrumbs { float:left; width:580px; overflow:hidden; }
.form-search { float:right; }
.form-search label { float:left; font-size:12px; font-weight:bold; padding:0 5px 0 0; }
.form-search input.input-text { float:left; width:212px; margin-right:5px; }
.form-search button.button { float:left; }
.form-search button.button span { height:23px; background-image:url(../images/bkg_btn-small.png); line-height:21px; }
.form-search .search-autocomplete { z-index:999; }
.form-search .search-autocomplete ul { border:1px solid #999; background-color:#f9f5f0; }
.form-search .search-autocomplete li { text-align:left; border-bottom:1px solid #f4eee7; padding:2px 8px 1px 8px; cursor:pointer; }
.form-search .search-autocomplete li .amount { float:right; font-weight:bold; }
.form-search .search-autocomplete li.odd { background-color:#f6f6f6; }
.form-search .search-autocomplete li.selected { background-color:#ecf9ea; }

.header-container .top-container { padding:5px 12px; background:#fff; border:1px solid #bbb; border-width:0 1px 1px; text-align:right; }

/********** < Navigation */
.nav-container 
{
	margin: auto;
	width: 1000px;
	height: 15px;
	background-color:#131313;
}
#nav 
{
float: left;
margin: 24px 0 0 3px;
font-size: 11px;
width: 990px;
border-bottom: 1px solid #F5F5F5;
}

/* All Levels */ /* Style consistent throughout all nav levels */
#nav li { position:relative;text-transform:uppercase; text-align:left;	}
#nav li.over { z-index:998; }
#nav a,
#nav a:hover { display:block; line-height:1.3em; text-decoration:none; }
#nav span { display:block; cursor:pointer; white-space:nowrap; }
#nav li ul span {white-space:normal; }

/* 0 Level */
#nav li { 
float: left;
margin: 4px 7px 11px -6px;
padding: 3px 8px;
}
#nav li.active a { color:#a1a1a1; }
#nav a { float:left;  padding-right:11px; color:#a1a1a1; font-weight:bold; }
#nav li.over a,
#nav a:hover { color:#533371; }
/* ... */

